# ebadge-python-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: PROTOCOL.md
ebadge_cli/: __main__.py  avi_builder.py  badge_frame.py  badge_info.py  battery_command.py  bind_response.py  ble_constants.py  ble_session.py  cli.py  crc16.py  file_browse.py  gui_qt.py  image_converter.py  jl_auth.py  ota_api.py  ota_update.py  rcsp_frame.py  rcsp_probe.py  rcsp_transfer.py
tests/: conftest.py  test_avi_builder.py  test_badge_frame.py  test_badge_info.py  test_battery_command.py  test_bind_response.py  test_ble_constants.py  test_cli_parse.py  test_e87_frame.py  test_imports.py  test_jl_auth.py
