[project]
name = "ebadge-cli"
version = "0.2.0"
description = "ZRun E87 電子吧唧 CLI + GUI（Python + PySide6），反向工程 BLE 協議"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "guan4tou2" }]
dependencies = [
    "bleak>=0.21.1",
    "Pillow>=10.0.0",
    "cryptography>=42.0.0",
    "qrcode[pil]>=7.4",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ebadge-cli = "ebadge_cli.cli:main"
ebadge-gui = "ebadge_cli.gui_qt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ebadge_cli"]

[tool.pyright]
extraPaths = ["."]
venvPath = "."
venv = ".venv"
